CICD For AKS with Blue-Green Deployment/Kubernetes-Manifests/Green-Env/ingress-green.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: green
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: myappgreen.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-green-service
            port:
              number: 80
